--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -13,7 +13,8 @@
         </div>
     </div>
     <div class="row">
-        <form action="" class="col s12 m8 offset-m2" method="POST" action="{{ url_for('edit_profile', username=user.name) }}">
+        <form action="" class="col s12 m8 offset-m2" method="POST"
+            action="{{ url_for('edit_profile', username=user.name) }}">
             <div class="row">
                 <span class="form-instruction">Tell Us Where You're From:</span>
                 <div class="input-field col s12">
@@ -30,8 +31,8 @@
             <div class="row">
                 <span class="form-instruction">Tell Us About Yourself:</span>
                 <div class="input-field col s12">
-                    <textarea id="description" name="description" type="text" value="{{ user.description }}"
-                        class="materialize-textarea"></textarea>
+                    <textarea id="description" name="description" type="text" 
+                        class="materialize-textarea">{{ user.description }}</textarea>
                     <label for="description">Personal Description</label>
                 </div>
             </div>
