--- a/templates/all_words.html
+++ b/templates/all_words.html
@@ -2,19 +2,40 @@
 {% block content %}
 
     <h3 class="center main-heading">All Words</h3>
+
+    <!-- Dropdown Trigger -->
+    <div class="row">
+        <div class="col s6">
+            <a class='dropdown-trigger btn-large amber darken-2' href='#' data-target='dropdown1'>
+                Words by Letter - A-Z <i class="material-icons">arrow_drop_down</i>
+            </a>
+        </div>
+    </div>
+    
+
+    <!-- Dropdown Structure -->
+    <ul id='dropdown1' class='dropdown-content'>
+        <li><a href="#!">one</a></li>
+        <li><a href="#!">two</a></li>
+        <li class="divider" tabindex="-1"></li>
+        <li><a href="#!">three</a></li>
+        <li><a href="#!"><i class="material-icons">view_module</i>four</a></li>
+        <li><a href="#!"><i class="material-icons">cloud</i>five</a></li>
+    </ul>
+
     <div class="row all-words-container">
         {% for word in words %}
-        <div class="col s12 m6">
-            <div class="card green darken-1">
-                <div class="card-content white-text">
-                    <span class="card-title"><strong>{{ word.name }}</strong></span>
-                    <p>{{ word.meaning }}</p>
-                </div>
-                <div class="card-action">
-                    <a href="{{ url_for('word_page', word_Id=word._id) }}">Click here to find out more!</a>
+            <div class="col s12 m6">
+                <div class="card green darken-1">
+                    <div class="card-content white-text">
+                        <span class="card-title"><strong>{{ word.name }}</strong></span>
+                        <p>{{ word.meaning }}</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="{{ url_for('word_page', word_Id=word._id) }}">Click here to find out more!</a>
+                    </div>
                 </div>
             </div>
-        </div>
         {% endfor %}
     </div>
 {% endblock %}
