Add function to display words by letter

--- a/templates/display_by_letter.html
+++ b/templates/display_by_letter.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="center main-heading">All Words</h3>
+    <h3 class="center main-heading">Words Beginning With "{{ current_letter }}"</h3>
 
     <!-- Dropdown Trigger -->
     <div class="row">
