--- a/templates/display_by_letter.html
+++ b/templates/display_by_letter.html
@@ -5,9 +5,9 @@
 
     <!-- Dropdown Trigger -->
     <div class="row">
-        <div class="col s6">
+        <div class="col s10 m6">
             <a class='dropdown-trigger btn-large amber darken-2' href='#' data-target='dropdown1'>
-                Words by Letter - A-Z <i class="material-icons">arrow_drop_down</i>
+                Letters A-Z <i class="material-icons">arrow_drop_down</i>
             </a>
         </div>
     </div>
