Add colouors to rating buttons to indicate more clearly if a user has rated a word

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -170,3 +170,11 @@ main {
     margin-right: 1px;
     text-transform: none;
 }
+
+.already-rated-up {
+    color: gold;
+}
+
+.already-rated-down {
+    color: red;
+}
