--- a/templates/word-page.html
+++ b/templates/word-page.html
@@ -63,30 +63,33 @@
             <div class="card-action">
                 {% if session.user %}
                     {% if session.user.lower() in liked %}
-                        <i class="material-icons already-rated">thumb_up</i>
+                        <i class="material-icons already-rated-up">thumb_up</i>
                     {% else %}
                         <a href="{{ url_for('rating_up', word_id=word._id, username=session['user']) }}"><i class="material-icons">thumb_up</i></a>
                     {% endif %}
 
                     {% if session.user.lower() in disliked %}
-                        <i class="material-icons already-rated">thumb_down</i>
+                        <i class="material-icons already-rated-down">thumb_down</i>
                     {% else %}
                         <a href="{{ url_for('rating_down', word_id=word._id, username=session['user']) }}"><i class="material-icons">thumb_down</i></a>
                     {% endif %}
 
                     <span class="rating-number"> {{ word.rating }} </span>
-                    {% if session.user.lower() in liked %}
-                        <span>You've liked this word!</span>
-                    {% endif %}
-                    {% if session.user.lower() in disliked %}
-                        <span>You've disliked this word!</span>
-                    {% endif %}
+
                 {% else %}
                     <span><a href="">Log in</a> or <a href="">register</a> to edit this word, and more!</span>            
                 {% endif %}
                 <div class="edit-delete-buttons">
                     <a class="btn deep-purple lighten-1 right" href="{{ url_for('edit_word', word_Id=word._id) }}">Edit</a>
                     <a class="btn red right" href="{{ url_for('delete_word', word_Id=word._id) }}">Delete</a>
+                </div>
+                <div class="col s12 rating-info-container">
+                    {% if session.user.lower() in liked %}
+                        <span>You've liked this word!</span>
+                    {% endif %}
+                    {% if session.user.lower() in disliked %}
+                        <span>You've disliked this word!</span>
+                    {% endif %}
                 </div>
             </div>
         </div>
