Add hover colours to rating buttons

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -171,10 +171,12 @@ main {
     text-transform: none;
 }
 
-.already-rated-up {
+.already-rated-up,
+#not-rated-up:hover {
     color: gold;
 }
 
-.already-rated-down {
+.already-rated-down,
+#not-rated-down:hover {
     color: red;
 }
