Wire up unrate functionality

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -180,3 +180,10 @@ main {
 #not-rated-down:hover {
     color: red;
 }
+
+#unrate-link-up,
+#unrate-link-down,
+#not-rated-up,
+#not-rated-down {
+    text-decoration: none;
+}
