--- a/templates/all_words.html
+++ b/templates/all_words.html
@@ -6,7 +6,7 @@
     <!-- Dropdown Trigger -->
     <div class="row">
         <div class="col s10 m6">
-            <a class='dropdown-trigger btn-large amber darken-2' href='#' data-target='dropdown1'>
+            <a class='dropdown-trigger btn amber darken-2' href='#' data-target='dropdown1'>
                 Letters A-Z <i class="material-icons">arrow_drop_down</i>
             </a>
         </div>
