Style & customize sort by dropdown list

--- a/templates/display_by_letter.html
+++ b/templates/display_by_letter.html
@@ -63,27 +63,27 @@
             
         </a></li>
         <li><a href="">
-            <i class="material-icons sort-icons grey-text text-darken-3">apps</i>
+            <i class="material-icons sort-icons grey-text text-darken-3">date_range</i>
             <span class="green-text text-darken-1">
-                 Alphabet <i class="material-icons">arrow_upward</i>
+                 Uploaded <i class="material-icons">arrow_upward</i>
             </span>
         </a></li>
         <li><a href="">
-            <i class="material-icons sort-icons grey-text text-darken-3">apps</i>
+            <i class="material-icons sort-icons grey-text text-darken-3">date_range</i>
             <span class="green-text text-darken-1">
-                 Alphabet <i class="material-icons">arrow_downward</i>
+                 Uploaded <i class="material-icons">arrow_downward</i>
             </span>
         </a></li>
         <li><a href="">
-            <i class="material-icons sort-icons grey-text text-darken-3">apps</i>
+            <i class="material-icons sort-icons grey-text text-darken-3">star</i>
             <span class="green-text text-darken-1">
-                 Alphabet <i class="material-icons">arrow_upward</i>
+                 Rating <i class="material-icons">arrow_upward</i>
             </span>
         </a></li>
         <li><a href="">
-            <i class="material-icons sort-icons grey-text text-darken-3">apps</i>
+            <i class="material-icons sort-icons grey-text text-darken-3">star</i>
             <span class="green-text text-darken-1">
-                 Alphabet <i class="material-icons">arrow_downward</i>
+                 Rating <i class="material-icons">arrow_downward</i>
             </span>
         </a></li>
     </ul>
