Add password/email validation script to register.html only so as to avoid undue console errors

--- a/templates/register.html
+++ b/templates/register.html
@@ -69,3 +69,7 @@
         </form>
     </div>
 {% endblock %}
+
+{% block scripts %}
+    <script src="{{ url_for('static', filename='js/password.js') }}"></script>
+{% endblock %}
