--- a/templates/base.html
+++ b/templates/base.html
@@ -52,16 +52,9 @@
                 <li><a href="{{ url_for('register') }}">Register</a></li>
             {% endif %}
         </ul>
-        <div class="row green darken-1">
-            <form action="{{ url_for('search') }}" method="post" class="col offset-m3 s12 m6" id="navSearch">
-                <div class="input-field search-container white">
-                    <i class="material-icons prefix">search</i>
-                    <input id="search" type="text" name="search">
-                    <label for="search">Search</label>
-                    <button type="submit">Search</button>
-                </div>
-            </form>
-        </div>
+        {% block search %}
+        {% endblock %}
+
     </header>
 
     <section>
