Wire up sort_letter funciton to display_by_letters.html

--- a/templates/display_by_letter.html
+++ b/templates/display_by_letter.html
@@ -62,39 +62,39 @@
 
     <!-- Dropdown Structure Sort By -->
     <ul id="sortDropdown" class="dropdown-content">
-        <li><a href="{{ url_for('sort_all', field='name', order='+') }}">
+        <li><a href="{{ url_for('sort_letters', letter=current_letter, field='name', order='+') }}">
             <i class="material-icons sort-icons grey-text text-darken-3">sort_by_alpha</i>
             <span class="green-text text-darken-1">
                  Alphabet <i class="material-icons">arrow_downward</i>
             </span>
             
         </a></li>
-        <li><a href="{{ url_for('sort_all', field='name', order='-') }}">
+        <li><a href="{{ url_for('sort_letters', letter=current_letter, field='name', order='-') }}">
             <i class="material-icons sort-icons grey-text text-darken-3">sort_by_alpha</i>
             <span class="green-text text-darken-1">
                  Alphabet <i class="material-icons">arrow_upward</i>
             </span>
             
         </a></li>
-        <li><a href="{{ url_for('sort_all', field='dateCreated', order='+') }}">
+        <li><a href="{{ url_for('sort_letters', letter=current_letter, field='dateCreated', order='+') }}">
             <i class="material-icons sort-icons grey-text text-darken-3">date_range</i>
             <span class="green-text text-darken-1">
                  Uploaded <i class="material-icons">arrow_upward</i>
             </span>
         </a></li>
-        <li><a href="{{ url_for('sort_all', field='dateCreated', order='-') }}">
+        <li><a href="{{ url_for('sort_letters', letter=current_letter, field='dateCreated', order='-') }}">
             <i class="material-icons sort-icons grey-text text-darken-3">date_range</i>
             <span class="green-text text-darken-1">
                  Uploaded <i class="material-icons">arrow_upward</i>
             </span>
         </a></li>
-        <li><a href="{{ url_for('sort_all', field='rating', order='+') }}">
+        <li><a href="{{ url_for('sort_letters', letter=current_letter, field='rating', order='+') }}">
             <i class="material-icons sort-icons grey-text text-darken-3">star</i>
             <span class="green-text text-darken-1">
                  Rating <i class="material-icons">arrow_downward</i>
             </span>
         </a></li>
-        <li><a href="{{ url_for('sort_all', field='rating', order='-') }}">
+        <li><a href="{{ url_for('sort_letters', letter=current_letter, field='rating', order='-') }}">
             <i class="material-icons sort-icons grey-text text-darken-3">star</i>
             <span class="green-text text-darken-1">
                  Rating <i class="material-icons">arrow_upward</i>
