Style word summary cards to be more responsive on mid-sized devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -195,3 +195,21 @@ main {
 .sort-icons {
     margin-right: 18px!important;
 }
+
+@media(min-width: 1134px) {
+    .word-summary {
+        min-height: 131px;
+    }
+}
+
+@media(min-width: 783px) and (max-width: 1133px) {
+    .word-summary {
+        min-height: 150px;
+    }
+}
+
+@media(min-width: 601px) and (max-width: 782px) {
+    .word-summary {
+        min-height: 191px;
+    }
+}
