--- a/templates/display_by_letter.html
+++ b/templates/display_by_letter.html
@@ -106,7 +106,7 @@
         {% for word in words %}
             <div class="col s12 m6">
                 <div class="card green darken-1">
-                    <div class="card-content white-text">
+                    <div class="card-content word-summary white-text">
                         <span class="card-title"><strong>{{ word.name }}</strong></span>
                         <p>{{ word.meaning }}</p>
                     </div>
