--- a/templates/home.html
+++ b/templates/home.html
@@ -40,7 +40,7 @@
     <div class="row featured-words">
         <div class="col s12 m6">
             <div class="card green darken-1">
-                <div class="card-content white-text">
+                <div class="card-content word-summary white-text">
                     <span class="card-title"><strong>{{ words[0].name.capitalize() }}</strong></span>
                     <p>{{ words[0].meaning }}</p>
                 </div>
