--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -2,11 +2,11 @@
 
 {% block search %}
     <div class="row green darken-1">
-        <form action="{{ url_for('search') }}" method="post" class="col offset-m3 s12 m6" id="navSearch">
+        <form action="{{ url_for('search') }}" method="post" class="col offset-m2 offset-l3 s12 m8 l6" id="navSearch">
             <div class="input-field search-container white">
                 <i class="material-icons prefix">search</i>
                 <input id="search" type="text" name="search">
-                <label for="search">Search</label>
+                <label for="search">Enter a word or a tag e.g 'Yurt' or 'Limerick'</label>
                 <button type="submit">Search</button>
             </div>
         </form>
