--- a/templates/new_word.html
+++ b/templates/new_word.html
@@ -12,7 +12,7 @@
             </div>
 
             <!-- alternative spellings of word -->
-            <div class="col s12 splling-button-container">
+            <div class="col s12 spelling-button-container">
                 <span class="btn green-text add-alt-button modal-trigger" href="#modal1"><i
                         class="tiny material-icons">add_circle</i> Add other spellings</span>
             </div>
@@ -54,7 +54,7 @@
             </div>
 
             <!-- alternative meanings of word -->
-            <div class="col s12 splling-button-container">
+            <div class="col s12 meaning-button-container">
                 <span class="btn green-text add-alt-button modal-trigger" href="#modal2"><i
                         class="tiny material-icons">add_circle</i> Add other
                     definitions</span>
@@ -97,7 +97,7 @@
             </div>
 
             <!-- alternative uses of word -->
-            <div class="col s12 splling-button-container">
+            <div class="col s12 uses-button-container">
                 <span class="btn green-text add-alt-button modal-trigger" href="#modal3"><i
                         class="tiny material-icons">add_circle</i> Add other
                     examples</span>
@@ -131,6 +131,15 @@
                 <div class="modal-footer">
                     <a href="#!" class="modal-close waves-effect waves-green btn-flat">Done</a>
                 </div>
+            </div>
+            <div class="input-field col s12">
+                <select>
+                    <option value="" disabled selected>Add a tag</option>
+                    <option value="1">Option 1</option>
+                    <option value="2">Option 2</option>
+                    <option value="3">Option 3</option>
+                </select>
+                <label>Tags</label>
             </div>
             <div class="new-word-cancel-submit">
                 <button class="btn red">Cancel <i class="small material-icons">close</i></button>
