--- a/templates/base.html
+++ b/templates/base.html
@@ -62,6 +62,15 @@
 
     <section>
         <!-- flash messages -->
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="row flashes">
+                        <h4 class="light-blue lighten-4 center-align">{{ message }}</h4>
+                    </div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
     </section>
 
     <main>
